tests/baselines/reference/contextualTyping9.errors.txt
tests/cases/compiler/contextualTyping9.ts(1,42): error TS2339: Property 'name' does not exist on type '{ id: number; }'.


==== tests/cases/compiler/contextualTyping9.ts (1 errors) ====
    var foo:{id:number;}[] = [{id:1}, {id:2, name:"foo"}];
                                             ~~~~
!!! error TS2339: Property 'name' does not exist on type '{ id: number; }'.